fix spacing in te-process and te-services partials

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -98,7 +98,7 @@ h6 {
 }
 
 .content-box {
-  @apply rounded-lg xl:w-2/5 bg-white dark:bg-darkmode-theme-light p-10 border border-indigo-100;
+  @apply rounded-lg xl:w-2/5 bg-white dark:bg-darkmode-theme-light md:p-10 p-4 border border-indigo-100;
 }
 
 .content-box p {
@@ -106,7 +106,7 @@ h6 {
 }
 
 .narrow-content-box {
-  @apply rounded-lg md:w-2/5 xl:w-1/4 bg-white dark:bg-darkmode-theme-light border p-10 border-indigo-100;
+  @apply rounded-lg md:w-2/5 xl:w-1/4 bg-white dark:bg-darkmode-theme-light border md:p-10 p-4  border-indigo-100;
 }
 
 .narrow-content-box p {
